budget calc page wrap fix

--- a/app/pages/depfin_services_budget_calc/depfin_services_budget_calc.scss
+++ b/app/pages/depfin_services_budget_calc/depfin_services_budget_calc.scss
@@ -15,31 +15,33 @@
     padding-top: 170px;
   }
 
-  // &__wrap {
-  //   margin-left: auto;
-  //   margin-right: auto;
+  &__wrap {
+    margin-left: auto;
+    margin-right: auto;
 
-  //   @media (min-width: 1025px) {
-  //     max-width: 1100px + 88px * 2;
-  //     padding-left: 88px;
-  //     padding-right: 88px;
-  //   }
+    @media (min-width: 1025px) {
+      max-width: 1100px + 88px * 2;
+      padding-left: 88px;
+      padding-right: 88px;
+    }
 
-  //   @media (max-width: 1024px) {
-  //     padding-left: 40px;
-  //     padding-right: 40px;
-  //   }
+    @media (max-width: 1024px) {
+      padding-left: 40px;
+      padding-right: 40px;
+    }
 
-  //   @media (max-width: 768px) {
-  //     padding-left: 10px;
-  //     padding-right: 10px;
-  //   }
+    @media (max-width: 768px) {
+      padding-left: 30px;
+      padding-right: 30px;
+      margin-left: 0 !important;
+      margin-right: 0 !important;
+    }
 
-  //   @media (max-width: 480px) {
-  //     padding-left: 0px;
-  //     padding-right: 0px;
-  //   }
-  // }
+    @media (max-width: 480px) {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+  }
 
   &__ahead {
     margin-bottom: 20px;
@@ -194,8 +196,8 @@
         margin-right: -25px;
       }
 
-      .slick-prev { margin-left:  -10px; }
-      .slick-next { margin-right: -10px; }
+      .slick-prev { margin-left:  -15px; }
+      .slick-next { margin-right: -15px; }
     }
 
     &-item {
